2018-05-16  Chris Nardi  <cnardi@chromium.org>

        Remove Document#selectedStylesheetSet/preferredStylesheetSet
        https://bugs.webkit.org/show_bug.cgi?id=185381

        Reviewed by Darin Adler.

        Update tests to remove selectedStylesheetSet/preferredStylesheetSet.

        * fast/css/link-disabled-attr-expected.txt:
        * fast/css/link-disabled-attr.html:
        * fast/dom/assign-to-prototype-accessor-on-prototype-should-throw-expected.txt:
        * fast/dom/assign-to-prototype-accessor-on-prototype-should-throw.html:
        * fast/dom/document-attribute-js-null-expected.txt:
        * fast/dom/document-attribute-js-null.html:
        * fast/shadow-dom/link-element-in-shadow-tree-expected.txt:
        * fast/shadow-dom/link-element-in-shadow-tree.html:
        * fast/shadow-dom/selected-stylesheet-in-shadow-tree-expected.txt: Removed.
        * fast/shadow-dom/selected-stylesheet-in-shadow-tree.html: Removed.

2018-05-16  Per Arne Vollan  <pvollan@apple.com>

        Mark animations/keyframes-dynamic.html and related tests as failing on Windows.
        https://bugs.webkit.org/show_bug.cgi?id=185678

        Unreviewed test gardening.

        * platform/win/TestExpectations:

2018-05-16  Antoine Quint  <graouts@apple.com>

        REGRESSION (r230574): Interrupted hardware transitions don't behave correctly
        https://bugs.webkit.org/show_bug.cgi?id=185299

        Unreviewed. Attempt to make this test more robust.

        * transitions/interrupted-transition-hardware.html:

2018-05-16  Antoine Quint  <graouts@apple.com>

        REGRESSION (r230574): Interrupted hardware transitions don't behave correctly
        https://bugs.webkit.org/show_bug.cgi?id=185299
        <rdar://problem/39630230>

        Reviewed by Simon Fraser.

        Add a new test where we interrupt a transition and check that upon returning to the original value,