@@ -1,3 +1,12 @@
+2018-05-16  Antoine Quint  <graouts@apple.com>
+
+        [Web Animations] Turn Web Animations with CSS integration on for test runners
+        https://bugs.webkit.org/show_bug.cgi?id=184819
+
+        Unreviewed. Another attempt to make this test more robust.
+
+        * transitions/interrupted-transition-hardware.html:
+
 2018-05-16  Chris Nardi  <cnardi@chromium.org>
 
         Remove Document#selectedStylesheetSet/preferredStylesheetSet
